--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      media notas
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,43 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Media notas</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+
+    <ion-item>
+      <ion-input label="Digite sua primeira nota" labelPlacement="floating" placeholder="Digite um número" type="number" [(ngModel)]="n1" ></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-input label="Digite sua segunda nota" labelPlacement="floating" placeholder="Digite um número" type="number" [(ngModel)]="n2" ></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-input label="Digite sua terceira nota" labelPlacement="floating" placeholder="Digite um número" type="number" [(ngModel)]="n3" ></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-input label="Digite sua quarta nota" labelPlacement="floating" placeholder="Digite um número" type="number" [(ngModel)]="n4" ></ion-input>
+    </ion-item>
+
+
+    <div id="adição">
+      <ion-button expand="block" (click)="calcular()">Calcular nota</ion-button>
+    </div>
+
+
+  <div id="resultado">
+  <ion-label>sua nota é: {{res}}</ion-label>
+
+<!--
+  <ion-label>você está: {{estado}}</ion-label>
+  -->
+
+
+</div>
+</div>
+
 </ion-content>
