--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,15 +16,15 @@
   <div id="container">
 
     <ion-item>
-      <ion-input label="Digite sua primeira nota" labelPlacement="floating" placeholder="Digite um número" type="number" [(ngModel)]="n1" ></ion-input>
+      <ion-input label="Digite sua primeira nota" labelPlacement="floating" placeholder="Digite um número" type="number" [(ngModel)]="n1"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-input label="Digite sua segunda nota" labelPlacement="floating" placeholder="Digite um número" type="number" [(ngModel)]="n2" ></ion-input>
+      <ion-input label="Digite sua segunda nota" labelPlacement="floating" placeholder="Digite um número" type="number"  maxlength="3" [(ngModel)]="n2"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-input label="Digite sua terceira nota" labelPlacement="floating" placeholder="Digite um número" type="number" [(ngModel)]="n3" ></ion-input>
+      <ion-input label="Digite sua terceira nota" labelPlacement="floating" placeholder="Digite um número" type="number" [(ngModel)]="n3"></ion-input>
     </ion-item>
 
     <ion-item>
@@ -39,10 +39,9 @@
 
   <div id="resultado">
   <ion-label>sua nota é: {{res}}</ion-label>
+<br>
+  <ion-label>você está {{res_estado}}</ion-label>
 
-<!--
-  <ion-label>você está: {{estado}}</ion-label>
-  -->
 
 
 </div>
