nota minima e maxima já estabelecida

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Media notas</ion-title>
+      <ion-title size="large" >Media notas</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -33,7 +33,7 @@
 
 
     <div id="adição">
-      <ion-button expand="block" (click)="calcular()">Calcular nota</ion-button>
+      <ion-button expand="block" (click)="verificacao_inicial()">Calcular nota</ion-button>
     </div>
 
 
